--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/src/assets/e-commerce.ico" />
-    <link href="/path-to-your-global.css" rel="stylesheet" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 minimum-scale=1" />
-    <title>E-commerce</title>
-    <meta name="theme-color" content="#000" />
+    <meta charset="utf-8" />
+    <link rel="icon" href="/favicon.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fugaz+One&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
+      rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  
+    <meta name="theme-color" content="#000
+    " />
     <link rel="apple-touch-icon" href="/favicon.png" />
     <link rel="manifest" href="/manifest.json" />
   
-    <!-- Meta Description -->
     <meta name="description"
-      content="I am a Developer with knowledge in JavaScript, CSS, and React. I enjoy experimenting and bringing simple things to life, as well as evolving more advanced processes." />
+      content="Soy Desarrollador con conocimientos en JavaScript, CSS y React me gusta experimentar y dar vida a cosas sencillas como a evoluciones de procesos mas avanzados." />
     <meta name="author" content="Cristian Ortiz" />
   
     <meta name="robots" content="noindex, nofollow" />
@@ -22,20 +26,6 @@
       content="Soy Desarrollador con conocimientos en JavaScript, CSS y React, modo responsivo me gusta experimentar y dar vida a cosas sencillas como a evoluciones de procesos mas avanzados." />
   
     <title>Cristian Ortiz | Desarrollador Web(JavaScript - CSS3 | React.js)</title>
-    
-    <!-- Open Graph / Facebook (para redes sociales como Facebook, LinkedIn, etc.) -->
-    <meta property="og:title" content="Cristian Ortiz | Desarrollador Web" />
-    <meta property="og:description" content="Desarrollador con experiencia en JavaScript, CSS y React." />
-    <meta property="og:image" content="https://co-port.netlify.app/static/favicon.png" />
-    <meta property="og:url" content="https://co-port.netlify.app/" />
-    <meta property="og:type" content="website" />
-
-    <!-- Twitter Card (para Twitter) -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Cristian Ortiz | Desarrollador Web" />
-    <meta name="twitter:description" content="Desarrollador con experiencia en JavaScript, CSS y React." />
-    <meta name="twitter:image" content="https://co-port.netlify.app/static/favicon.png" />
-  
   </head>
   <body>
     <noscript>Habilita JavaScript para esta aplicación.</noscript>
